更新高德POI数据

--- a/pages/weather/map.wxml
+++ b/pages/weather/map.wxml
@@ -1,2 +1,9 @@
 <!--pages/weather/map.wxml-->
 <text>pages/weather/map.wxml</text>
+<view class="map_container">
+  <map class="map" markers="{{markers}}" setting="{{setting}}" bindmarkertap="bindMarker"></map>
+</view>
+<view class="des">
+  <text>{{markerText.name}}，</text>
+  <text>{{markerText.address}}</text>
+</view>
