--- a/pages/weather/map.wxss
+++ b/pages/weather/map.wxss
@@ -1,1 +1,24 @@
 /* pages/weather/map.wxss */
+.map_container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+.map {
+  width: 100%;
+  height: 100%;
+}
+.des {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 80px;
+  width: 100vw;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 0px -5px 5px #ededed;
+  border-radius: 30px 30px 0 0;
+}
