--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
+  background-color: #fff;
 }
 
 .userinfo-avatar {
@@ -11,9 +11,24 @@
   width: 128rpx;
   height: 128rpx;
   margin: 20rpx;
-  border-radius: 50%;
+  /* border-radius: 50%; */
+  background-color: #aaa;
 }
-
+.nickname-container {
+  margin-top: 40rpx;
+  width: 100%;
+  height: 80rpx;
+  border-width: 2px 0;
+  border-style: solid;
+  border-color: #f7f7f7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+/* .userinfo-nickname {
+  display: inline-block;
+} */
 .usermotto {
-  margin-top: 200px;
+  margin-top: 330rpx;
 }
