--- a/pages/route/walking.wxss
+++ b/pages/route/walking.wxss
@@ -17,26 +17,28 @@
   color:#0091ff;
 }
 .map_box{
-  position:absolute;
-  top: 35px;
-  bottom: 90px;
-  left: 0px;
-  right: 0px;
+  width: 100vw;
+  height: 100vh;
 }
 #navi_map{
   width: 100%;
   height: 100%;
 }
 .text_box{
-  position:absolute;
-  height: 90px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 80px;
+  width: 100vw;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 0px -5px 5px #ededed;
+  border-radius: 30px 30px 0 0;
 }
-.text_box .text{
+/* .text_box .text{
   margin: 15px;
-}
+} */
 .detail_button{
   position:absolute;
   bottom: 30px;
